secrdc: Demo configurations

--- a/examples/er-rest-example/Makefile
+++ b/examples/er-rest-example/Makefile
@@ -31,6 +31,7 @@ APPS += rest-engine
 #CUSTOM_RULE_C_TO_OBJECTDIR_O = 1
 #CUSTOM_RULE_S_TO_OBJECTDIR_O = 1
 
+MODULES += core/net/llsec/adaptivesec
 CONTIKI_WITH_IPV6 = 1
 include $(CONTIKI)/Makefile.include
 
