slip-radio: send addresses and data via packetutils, too; use normal framer

--- a/examples/ipv6/slip-radio/Makefile
+++ b/examples/ipv6/slip-radio/Makefile
@@ -12,7 +12,7 @@ CONTIKI=../../..
 SMALL=1
 
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
-PROJECT_SOURCEFILES += slip-net.c no-framer.c
+PROJECT_SOURCEFILES += slip-net.c
 ifeq ($(TARGET),sky)
   PROJECT_SOURCEFILES += slip-radio-cc2420.c slip-radio-sky-sensors.c
 endif
