add debugging config to allow hardware debugging via jtag, change RF_CHANNEL to 16 to avoid interference from another project, revert this commit again later

--- a/Makefile.include
+++ b/Makefile.include
@@ -47,7 +47,7 @@ targets:
 savetarget:
 	-@rm -f Makefile.target
 	@echo "saving Makefile.target"
-	@echo >Makefile.target "TARGET = $(TARGET)"
+	@echo >Makefile.target "TARGET = $(TARGET)\nBOARD_REVISION = $(BOARD_REVISION)"
 
 savedefines:
 	-@rm -f Makefile.$(TARGET).defines
