key-revocation: add temporary debug endpoint to the key-revocation coap server to allow for automated tests, add node revocation list, remove compromised nodes from neighbor list and add them to the NRL

--- a/core/net/llsec/adaptivesec/Makefile.adaptivesec
+++ b/core/net/llsec/adaptivesec/Makefile.adaptivesec
@@ -1,1 +1,1 @@
-CONTIKI_SOURCEFILES += adaptivesec.c akes.c akes-delete.c akes-nbr.c akes-single.c akes-trickle.c coresec-strategy.c noncoresec-strategy.c potr.c
+CONTIKI_SOURCEFILES += adaptivesec.c akes.c akes-bloms.c akes-delete.c akes-nbr.c akes-single.c akes-trickle.c akes-update.c coresec-strategy.c noncoresec-strategy.c nrl.c potr.c
